--- a/package.json
+++ b/package.json
@@ -2,10 +2,35 @@
   "author": "Hurr Slack",
   "name": "HurrSlack",
   "description": "Post pinned tweets to slack",
+  "repository": {
+    "type": "git",
+    "url": "HurrSlack/Pinwheel"
+  },
   "version": "0.0.1",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development node app.js",
+    "lint": "eslint ."
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "eslint ."
+    }
+  },
   "dependencies": {
     "dotenv": "^2.0.0",
     "node-slackbot": "0.0.6",
     "twit": "^2.2.4"
-  }
+  },
+  "devDependencies": {
+    "cross-env": "^2.0.0",
+    "eslint": "^3.1.1",
+    "eslint-config-semistandard": "^6.0.2",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-standard": "^2.0.0",
+    "ghooks": "^1.3.2"
+  },
+  "license": "SEE LICENSE IN LICENSE"
 }
