--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     }
   },
   "dependencies": {
+    "@slack/client": "^3.5.1",
     "canvas": "^1.4.0",
     "canvas-text-wrapper": "^0.9.2",
+    "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
-    "node-slackbot": "0.0.6",
     "twit": "^2.2.4"
   },
   "devDependencies": {
-    "cross-env": "^2.0.0",
     "eslint": "^3.1.1",
     "eslint-config-semistandard": "^6.0.2",
     "eslint-config-standard": "^5.3.5",
