--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
     "dev": "cross-env NODE_ENV=development node app.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "mocha"
   },
   "config": {
     "ghooks": {
@@ -23,16 +24,21 @@
     "canvas-text-wrapper": "^0.9.2",
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
+    "lodash.assign": "^4.0.9",
     "twit": "^2.2.4"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.1.1",
     "eslint-config-semistandard": "^6.0.2",
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
-    "ghooks": "^1.3.2"
+    "ghooks": "^1.3.2",
+    "mocha": "^2.5.3",
+    "nock": "^8.0.0",
+    "sinon": "^1.17.4"
   },
   "license": "SEE LICENSE IN LICENSE"
 }
