--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@slack/client": "^3.5.1",
     "canvas": "^1.4.0",
     "canvas-text-wrapper": "^0.9.2",
+    "concat-stream": "^1.5.1",
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
     "lodash.assign": "^4.0.9",
