--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "start": "cross-env NODE_ENV=production node app.js",
     "dev": "cross-env NODE_ENV=development node app.js",
     "lint": "eslint .",
-    "test": "./node_modules/.bin/istanbul test _mocha -- -R spec"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "eslint ."
-    }
+    "test": "istanbul test _mocha -- -R spec",
+    "postinstall": "node ./install-hooks.js"
   },
   "dependencies": {
     "@slack/client": "^3.5.1",
@@ -36,7 +32,6 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
-    "ghooks": "^1.3.2",
     "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
