change installed package name to phantomjs-prebuilt

--- a/.ebextensions/phantomjs.config
+++ b/.ebextensions/phantomjs.config
@@ -14,4 +14,4 @@ files:
 
 commands:
   install_phantom: 
-    command: bash -c "PATH=`/opt/elasticbeanstalk/nodepath.rb`:\$PATH npm -g install phantomjs" 
+    command: bash -c "PATH=`/opt/elasticbeanstalk/nodepath.rb`:\$PATH npm -g install phantomjs-prebuilt" 
