--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
     "lodash.assign": "^4.0.9",
+    "lru-cache": "^4.1.1",
     "phantom": "^2.1.13",
     "twit": "^2.2.4"
   },
