--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "camelspace": "^2.0.0",
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
+    "firebase-admin": "^9.6.0",
     "twitter-api-client": "^1.3.2"
   },
   "devDependencies": {
