--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "cross-env NODE_ENV=development node lib/server.js",
     "dev:external": "cross-env NODE_ENV=development node scripts/external-dev-server.js",
     "lint": "prettier --write {lib,scripts}/ && eslint {lib,scripts}/",
-    "test": "echo No tests for v2 yet",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
     "prepare": "node scripts/install-hooks.js"
   },
   "dependencies": {
@@ -26,9 +27,12 @@
     "twitter-api-client": "^1.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "chalk": "^4.1.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "jest": "^26.6.3",
     "ngrok": "^4.0.1",
     "prettier": "2.2.1"
   },
