--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
     "firebase-admin": "^9.6.0",
+    "mysql2": "^2.3.2",
     "twitter-api-client": "^1.3.2"
   },
   "devDependencies": {
