Add tweet removal, plus database to store tweets per post (#56)
* chore: bookkeeping, repo cleanup

* dev: make server script more readable and useful

* dev: script for auto-exposing ngrok

* feat: refactor and add poast to tweet db. Closes #40

* test: add tests for project

* fix prettier version

* mysql

* sql corrections

* reencode slack entities for tooting

* npm 8 lockfile

* jest upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,13 @@ jspm_packages
 # vim swap files
 *.swp
 
+# IDE
+.vscode
+
 env_variables
 .env
 .env.*
+auth.*.json
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
