--- a/package.json
+++ b/package.json
@@ -12,22 +12,29 @@
     "start": "cross-env NODE_ENV=production node lib/server.js",
     "auth-dev": "node scripts/get-dev-auth.js",
     "dev": "cross-env NODE_ENV=development node lib/server.js",
+    "dev:external": "cross-env NODE_ENV=development node scripts/external-dev-server.js",
     "lint": "prettier --write {lib,scripts}/ && eslint {lib,scripts}/",
-    "test": "echo No tests for v2 yet",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
     "prepare": "node scripts/install-hooks.js"
   },
   "dependencies": {
     "@slack/bolt": "^3.2.0",
-    "@slack/client": "^3.5.1",
-    "camelspace": "^1.1.2",
+    "camelspace": "^2.0.0",
     "cross-env": "^2.0.0",
     "dotenv": "^2.0.0",
+    "firebase-admin": "^9.6.0",
+    "mysql2": "^2.3.2",
     "twitter-api-client": "^1.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "chalk": "^4.1.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "jest": "^27.3.0",
+    "ngrok": "^4.0.1",
     "prettier": "2.2.1"
   },
   "license": "SEE LICENSE IN LICENSE",
