--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "@slack/bolt": "^3.7.0",
     "camelspace": "^2.0.0",
+    "debug": "^4.3.4",
     "dotenv": "^10.0.0",
+    "firebase-admin": "^10.0.2",
     "mysql2": "^2.3.2",
+    "postgres": "^3.0.2",
     "twitter-api-client": "^1.3.2"
   },
   "devDependencies": {
